mobile view overlapping issue fix

--- a/src/Pages/Events/EventCarousel.module.scss
+++ b/src/Pages/Events/EventCarousel.module.scss
@@ -40,13 +40,7 @@
   }
 }
 
-@media screen and (max-height: 800px) {
-  .cardContainer {
-    left: 80vw;
-    top: 30vh;
-    scale: 0.8;
-  }
-}
+
 
 @media screen and (max-width: 1000px) {
   .cardContainer {
@@ -64,6 +58,7 @@
 @media screen and (max-width: 600px) {
   .cardContainer {
     left: 25vw;
+    scale: 0.8;
   }
 }
 
